# Papers

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  P2284.md  PXXXX.md  README.md  StateMachineNotes.md  const_native_array.cpp  main.cpp
P0635/: README.md  array  main.cpp
P2022/: Makefile  P2022R0.md  P2022R2.md
P2022/tests/: CMakeLists.txt
P2022/tests/header/: 3way.hpp
P2022/tests/units/: CMakeLists.txt  avi.cpp  avi_tests.cpp  basic_check.cpp  compilation_error.cpp  containers.cpp  ranges.cpp  t1.cpp  unordered.cpp
P2832/: D2832R0.md  ulem.sty
P2832/tests/: CMakeLists.txt
P2832/tests/header/: convertible_and_same_as.hpp
P2832/tests/units/: CMakeLists.txt  basic_check.cpp
docker/: .run.swp  Dockerfile  HOWTO  create  run
executors/: CMakeLists.txt  executor.cpp  executor.h  main.cpp  main_free_func.cpp  series.h  then.h
home/: .bash_history  .bashrc  .gitconfig  .viminfo  .vimrc
